--- a/src/laptop/Recensione.fxml
+++ b/src/laptop/Recensione.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="399.0" prefWidth="582.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane prefHeight="399.0" prefWidth="582.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laptop.ViewEvalUsrController">
    <children>
       <Pane prefHeight="399.0" prefWidth="582.0">
          <children>
@@ -41,7 +40,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button fx:id="backbutton" layoutX="432.0" layoutY="330.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="104.0" text="Indietro" />
+            <Button fx:id="backbutton" layoutX="432.0" layoutY="330.0" mnemonicParsing="false" onAction="#GoBack" prefHeight="40.0" prefWidth="104.0" text="Indietro" />
          </children>
       </Pane>
    </children>
