--- a/src/laptop/OwnRecensioni.fxml
+++ b/src/laptop/OwnRecensioni.fxml
@@ -11,10 +11,10 @@
    <children>
       <TableView fx:id="tabella" layoutY="192.0" prefHeight="418.0" prefWidth="1052.0">
          <columns>
-            <TableColumn fx:id="starsColumn" prefWidth="75.0" text="Target" />
-            <TableColumn fx:id="votoColumn" prefWidth="75.0" text="Voto" />
+            <TableColumn fx:id="targetColumn" prefWidth="75.0" text="Target" />
+            <TableColumn fx:id="starsColumn" prefWidth="75.0" text="Voto" />
             <TableColumn fx:id="evaltestoColumn" prefWidth="75.0" text="Valutazione" />
-            <TableColumn fx:id="evalAction" prefWidth="75.0" text="Azioni" />
+            <TableColumn fx:id="evalAzioni" prefWidth="75.0" text="Azioni" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -25,7 +25,7 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Button fx:id="perUtente" layoutX="724.0" layoutY="118.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="155.0" text="Utenti incontrati">
+      <Button fx:id="perUtente" layoutX="724.0" layoutY="118.0" mnemonicParsing="false" onAction="#VisuallizaPerUtente" prefHeight="52.0" prefWidth="155.0" text="Utenti incontrati">
          <font>
             <Font size="18.0" />
          </font>
