--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,3 +1,11 @@
-.nostroSito {
+.login {
     background: #f7ffaa;
+    width: 100%;
+    max-width: 800px;
+    padding: 15px;
+    margin: auto;
+}
+
+.search {
+    background: #2aabd2;
 }
