--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,12 +1,21 @@
-.login
+body {
+    background-color: #f5f5f5;
+}
+
+.login,
 .search {
-    background: #f7ffaa;
+    background: #fff;
+    border: 2px solid #17a2b8;
     width: 100%;
     max-width: 800px;
     padding: 15px;
-    margin: auto;
 }
 
 .search {
-    background: #2aabd2;
+    border: 2px solid #28a745;
+    margin-top: 10px;
+}
+
+.search > form > div > div > label {
+    margin-right: 10px;
 }
