--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,6 +1,6 @@
-body {
-    background-color: #f5f5f5;
-}
+/******************** HomePage.jsp ********************/
+
+body { background-color: #f5f5f5; }
 
 .login,
 .search {
@@ -16,13 +16,17 @@ body {
     margin-top: 10px;
 }
 
-.login > form > div > div > label {
-    margin-right: 30px;
+.login > form > div > div > label { margin-right: 30px; }
+.search > form > div > div > label { margin-right: 10px; }
+
+/******************** ProfileView.jsp ********************/
+
+.logout {
+    text-align: left;
+    margin: 10px;
 }
 
-.search > form > div > div > label {
-    margin-right: 10px;
-}
+/******************** CreateView.jsp ********************/
 
 .starsRadio > input {
     margin-right: 20px;
